Details
- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
Trivial
 
- 
        0.4.11-dev-111-ge5c0bfa https://git.reactos.org/?p=reactos.git;a=commit;h=e5c0bfacf1374abf34abbaf75047149a6252ca5e
 
Description
A trivial aesthetics issue only.
In 0.4.11-dev-111-ge5c0bfa Fraizeraust implemented for us the shutdown-progress-Count-Down-bar in 1st stage setup.
It intends to draw the progress bar with red color.
Our other progress bars in usetup are always drawn with yellow color by default.
The red one is fine, but there is a very subtle visual glitch, that is most likely best visible on slower computers or when slowing down the VM.
Observed result
When the user early-skips that red progress bar with the enter-key, then it is erroneously drawn in yellow colour for a fraction of a second.
 0.4.14-RC-41-gf0a2e6e_affected.webm![]()
 0.4.15-dev-1063-gf2e3e8a is affected as well
- nothing interesting is logged when doing that
 
Expected result
no yellow flashing